tests/error/include.d
#include <stdio.h>

BEGIN {
	printf("success");
	exit(0);
}